Add access restriction to CRUD pages to anonymous users

--- a/WebApplication2/Pages/Index.cshtml
+++ b/WebApplication2/Pages/Index.cshtml
@@ -14,7 +14,7 @@
 					</div>
 			</div>
 			<div class="col-lg-5"> 
-				<img style="object-fit:cover;" class="img-fluid" alt="owner of Pedizzeria" src="~/images/pedizzeria.jpeg" />
+				<img style="object-fit:cover;" class="img-fluid img-thumbnail" alt="owner of Pedizzeria" src="~/images/pedizzeria.jpeg" />
 			</div>
 	</div>
 </div>
