--- a/WebApplication2/Pages/Shared/_Layout.cshtml
+++ b/WebApplication2/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject SignInManager<IdentityUser> SignInManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -22,12 +24,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
+                        @if(SignInManager.IsSignedIn(User)){
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CRUD/Pizzas/Index">Pizzas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CRUD/Orders/Index">Orders</a>
                         </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
