--- a/WebApplication2/Pages/CRUD/Orders/Create.cshtml
+++ b/WebApplication2/Pages/CRUD/Orders/Create.cshtml
@@ -33,11 +33,11 @@
                 <input asp-for="Order.PizzaPrice" class="form-control" />
                 <span asp-validation-for="Order.PizzaPrice" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Order.OrderStatus" class="control-label"></label>
                 <select asp-for="Order.OrderStatus" class="form-control"></select>
                 <span asp-validation-for="Order.OrderStatus" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
