--- a/WebApplication2/Pages/CRUD/Orders/Delete.cshtml
+++ b/WebApplication2/Pages/CRUD/Orders/Delete.cshtml
@@ -36,12 +36,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Order.PizzaPrice)
         </dd>
-        <dt class="col-sm-2">
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Order.OrderStatus)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Order.OrderStatus)
-        </dd>
+        </dd>*@
     </dl>
     
     <form method="post">
