Add menu creation for admin

--- a/WebApplication2/Pages/CRUD/Orders/Create.cshtml
+++ b/WebApplication2/Pages/CRUD/Orders/Create.cshtml
@@ -18,11 +18,11 @@
                 <input asp-for="Order.CstName" class="form-control" />
                 <span asp-validation-for="Order.CstName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Order.CreatedDate" class="control-label"></label>
                 <input asp-for="Order.CreatedDate" class="form-control" />
                 <span asp-validation-for="Order.CreatedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Order.PizzaName" class="control-label"></label>
                 <input asp-for="Order.PizzaName" class="form-control" />
