--- a/WebApplication2/Pages/Index.cshtml
+++ b/WebApplication2/Pages/Index.cshtml
@@ -10,7 +10,7 @@
 					<h1 class="text-lg-start display-2 fw-bold">Pizza has never tasted this good</h1>
 					<p class="text-lg-start fs-6">Locally-sourced ingredients to excite your taste buds</p>
 					<div class="container-fluid text-lg-start ps-0">
-						<a class="btn btn-danger" asp-page="/Pizzas">Order Now</a>
+						<a class="btn btn-danger" asp-page="/Menu">Join Now</a>
 					</div>
 			</div>
 			<div class="col-lg-5"> 
