--- a/WebApplication2/Pages/CRUD/Orders/Details.cshtml
+++ b/WebApplication2/Pages/CRUD/Orders/Details.cshtml
@@ -1,4 +1,11 @@
 ﻿@page
+
+@using WebApplication2.Auth
+@using Pizzeria.Models
+@using Microsoft.AspNetCore.Authorization
+
+@inject IAuthorizationService AuthorizationService
+
 @model WebApplication2.Pages.CRUD.Orders.DetailsModel
 
 @{
@@ -35,14 +42,50 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Order.PizzaPrice)
         </dd>
-        @*<dt class="col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Order.OrderStatus)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Order.OrderStatus)
-        </dd>*@
+        </dd>
     </dl>
 </div>
+
+@{
+    var isAuthorized = await AuthorizationService.AuthorizeAsync(
+                User, Model.Order, OrderOperations.Deliver);
+    
+    @if(isAuthorized.Succeeded){
+    //@if(true){
+        @if (Model.Order.OrderStatus < OrderStatusConstants.Cooking){
+            <form method="post">
+                <input hidden name="id" value=@Model.Order.Id></input>
+                <input hidden name="status" value=@OrderStatusConstants.Cooking></input>
+                <button type="submit" class="btn btn-sm btn-danger">Cook</button>
+            </form>
+        }
+
+        @if (Model.Order.OrderStatus < OrderStatusConstants.Ready)
+        {
+            <form method="post">
+                <input hidden name="id" value=@Model.Order.Id></input>
+                <input hidden name="status" value=@OrderStatusConstants.Ready></input>
+                <button type="submit" class="btn btn-sm btn-danger">Ready</button>
+            </form>
+        }
+
+        @if (Model.Order.OrderStatus < OrderStatusConstants.Delivered)
+        {
+            <form method="post">
+                <input hidden name="id" value=@Model.Order.Id></input>
+                <input hidden name="status" value=@OrderStatusConstants.Delivered></input>
+                <button type="submit" class="btn btn-sm btn-danger">Deliver</button>
+            </form>
+        }
+    }
+}
+
+
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Order?.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
