--- a/WebApplication2/Pages/Shared/_Layout.cshtml
+++ b/WebApplication2/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using WebApplication2.Auth
+@inject SignInManager<IdentityUser> SignInManager
 
 <!DOCTYPE html>
 <html lang="en">
@@ -24,7 +25,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        @if(SignInManager.IsSignedIn(User)){
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Menu">Menu</a>
+                        </li>
+                        @if(User.IsInRole(ApplicationUserRoles.AdminRole))
+                        {
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CRUD/Pizzas/Index">Pizzas</a>
                         </li>
